# eventfold-db

./: CLAUDE.md  Cargo.toml  README.md  build.rs
docs/: design.md
eventfold-console/: Cargo.toml
eventfold-console/src/: app.rs  client.rs  error.rs  lib.rs  main.rs  tui.rs
eventfold-console/src/views/: global_log.rs  live_tail.rs  mod.rs  stream_detail.rs  streams.rs
prd/: 001-core-types-and-errors-status.md  001-core-types-and-errors-tickets.md  001-core-types-and-errors.md  003-storage-engine-status.md  003-storage-engine-tickets.md  003-storage-engine.md  004-writer-task-status.md  005-subscription-broker-status.md  005-subscription-broker-tickets.md  005-subscription-broker.md  006-grpc-service-status.md  006-grpc-service-tickets.md  006-grpc-service.md  007-server-binary-status.md  007-server-binary-tickets.md  007-server-binary.md  008-batch-atomicity-crash-consistency.md  009-console-tui.md  011-tls-mtls-support-status.md  011-tls-mtls-support-tickets.md  011-tls-mtls-support.md  012-grpc-health-check-status.md  012-grpc-health-check-tickets.md  012-grpc-health-check.md  013-metrics-observability-status.md  013-metrics-observability-tickets.md  013-metrics-observability.md  014-list-streams-rpc-status.md  014-list-streams-rpc-tickets.md  014-list-streams-rpc.md  017-server-assigned-timestamps-status.md  017-server-assigned-timestamps-tickets.md  017-server-assigned-timestamps.md
prd/001-core-types-and-errors-reports/: ticket-01-impl.md  ticket-01-review.md  ticket-02-impl.md  ticket-02-review.md  ticket-03-impl.md  ticket-03-review.md  ticket-04-impl.md  ticket-04-review.md
prd/003-storage-engine-reports/: ticket-01-impl.md  ticket-01-review.md  ticket-02-impl.md  ticket-02-review.md  ticket-03-impl.md  ticket-03-review.md  ticket-04-impl.md  ticket-04-review.md  ticket-05-impl.md  ticket-05-review.md
proto/: eventfold.proto
src/: broker.rs  codec.rs  dedup.rs  error.rs  lib.rs  main.rs  metrics.rs  reader.rs  service.rs  store.rs  types.rs  writer.rs
tests/: broker_integration.rs  grpc_service.rs  health_check.rs  metrics.rs  server_binary.rs  tls_integration.rs  writer_integration.rs
(+67 files in other folders)
