[package]
name = "eventfold-db"
version = "0.1.0"
edition = "2024"
description = "A lightweight, single-node event store for event sourcing and CQRS"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1"
crc32fast = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
tempfile = "3"
